--- a/WeatherCheck/Base.lproj/Main.storyboard
+++ b/WeatherCheck/Base.lproj/Main.storyboard
@@ -32,26 +32,150 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r48-Ap-Kk4">
-                                <rect key="frame" x="95" y="202" width="224" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jq1-PS-4hO">
+                                <rect key="frame" x="95" y="176" width="224" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="NgF-yD-ceq"/>
+                                    <constraint firstAttribute="height" constant="30" id="Ggb-VF-bwh"/>
                                 </constraints>
-                                <state key="normal" title="Denver"/>
+                                <state key="normal" title="Use Current Location"/>
                                 <connections>
-                                    <action selector="SearchCity:" destination="4T9-Ww-Kj0" eventType="touchUpInside" id="GMi-3w-IKH"/>
+                                    <action selector="UseLocation:" destination="4T9-Ww-Kj0" eventType="touchUpInside" id="o5z-ga-qaQ"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0RV-Sq-yfd">
+                                <rect key="frame" x="20" y="226" width="374" height="172"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jBT-pR-Of3">
+                                        <rect key="frame" x="10" y="10" width="354" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="7Lv-cp-ocV"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Temperature: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="plf-1e-yE3">
+                                        <rect key="frame" x="10" y="42" width="354" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="yg2-Px-6xm"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Humidity: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6nG-Ey-Yfy">
+                                        <rect key="frame" x="10" y="74" width="354" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="TjA-fB-pja"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feels Like: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J0o-mg-gvF">
+                                        <rect key="frame" x="10" y="106" width="354" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="Wrk-uo-aA0"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather Details: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HwF-Ag-Q01">
+                                        <rect key="frame" x="10" y="138" width="354" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="jlI-bD-23f"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.94059986598563916" green="0.94059986598563916" blue="0.94059986598563916" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="plf-1e-yE3" secondAttribute="trailing" constant="10" id="1ch-Pe-FMp"/>
+                                    <constraint firstItem="6nG-Ey-Yfy" firstAttribute="top" secondItem="plf-1e-yE3" secondAttribute="bottom" constant="8" symbolic="YES" id="3Ph-KE-Kae"/>
+                                    <constraint firstItem="J0o-mg-gvF" firstAttribute="top" secondItem="6nG-Ey-Yfy" secondAttribute="bottom" constant="8" symbolic="YES" id="6Ss-y7-tIy"/>
+                                    <constraint firstItem="plf-1e-yE3" firstAttribute="top" secondItem="jBT-pR-Of3" secondAttribute="bottom" constant="8" symbolic="YES" id="Bq9-AY-R6f"/>
+                                    <constraint firstAttribute="trailing" secondItem="6nG-Ey-Yfy" secondAttribute="trailing" constant="10" id="F5e-w3-ERB"/>
+                                    <constraint firstAttribute="trailing" secondItem="J0o-mg-gvF" secondAttribute="trailing" constant="10" id="Ihy-uU-kev"/>
+                                    <constraint firstItem="6nG-Ey-Yfy" firstAttribute="leading" secondItem="0RV-Sq-yfd" secondAttribute="leading" constant="10" id="Kln-aa-Ewz"/>
+                                    <constraint firstAttribute="trailing" secondItem="HwF-Ag-Q01" secondAttribute="trailing" constant="10" id="Lrm-kF-wNg"/>
+                                    <constraint firstItem="plf-1e-yE3" firstAttribute="leading" secondItem="0RV-Sq-yfd" secondAttribute="leading" constant="10" id="R49-kn-l31"/>
+                                    <constraint firstAttribute="bottom" secondItem="HwF-Ag-Q01" secondAttribute="bottom" constant="10" id="T2Q-cU-bap"/>
+                                    <constraint firstAttribute="height" constant="172" id="YUz-SC-gXa"/>
+                                    <constraint firstItem="jBT-pR-Of3" firstAttribute="top" secondItem="0RV-Sq-yfd" secondAttribute="top" constant="10" id="bWf-Vq-Thr"/>
+                                    <constraint firstItem="jBT-pR-Of3" firstAttribute="leading" secondItem="0RV-Sq-yfd" secondAttribute="leading" constant="10" id="cBV-nA-HP2"/>
+                                    <constraint firstItem="HwF-Ag-Q01" firstAttribute="top" secondItem="J0o-mg-gvF" secondAttribute="bottom" constant="8" symbolic="YES" id="lke-cm-W5a"/>
+                                    <constraint firstAttribute="trailing" secondItem="jBT-pR-Of3" secondAttribute="trailing" constant="10" id="nP7-sz-ZfZ"/>
+                                    <constraint firstItem="J0o-mg-gvF" firstAttribute="leading" secondItem="0RV-Sq-yfd" secondAttribute="leading" constant="10" id="qta-8g-LR5"/>
+                                    <constraint firstItem="HwF-Ag-Q01" firstAttribute="leading" secondItem="0RV-Sq-yfd" secondAttribute="leading" constant="10" id="rYf-0i-SUi"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" text="" placeholder="Search by City or Zip Code" translatesAutoresizingMaskIntoConstraints="NO" id="byg-Ry-eeQ">
+                                <rect key="frame" x="0.0" y="88" width="414" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="FZu-OF-UjR"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="search" enablesReturnKeyAutomatically="YES" textContentType="location"/>
+                                <scopeButtonTitles>
+                                    <string>Title</string>
+                                    <string>Title</string>
+                                </scopeButtonTitles>
+                                <connections>
+                                    <outlet property="delegate" destination="4T9-Ww-Kj0" id="aWB-aH-6Tb"/>
+                                </connections>
+                            </searchBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zFE-zy-RJo">
+                                <rect key="frame" x="191.5" y="142" width="31" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="31" id="tUM-aa-wqh"/>
+                                    <constraint firstAttribute="height" constant="24" id="yL9-La-hy2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CHY-8u-7ys">
+                                <rect key="frame" x="77" y="408" width="260" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="aus-DZ-f7t"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="JEv-iN-AAR"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="r48-Ap-Kk4" firstAttribute="leading" secondItem="JEv-iN-AAR" secondAttribute="leading" constant="95" id="5F6-BM-mKG"/>
-                            <constraint firstItem="JEv-iN-AAR" firstAttribute="trailing" secondItem="r48-Ap-Kk4" secondAttribute="trailing" constant="95" id="kIX-DG-ukD"/>
-                            <constraint firstItem="r48-Ap-Kk4" firstAttribute="top" secondItem="JEv-iN-AAR" secondAttribute="top" constant="114" id="upf-bo-OzK"/>
+                            <constraint firstItem="0RV-Sq-yfd" firstAttribute="top" secondItem="jq1-PS-4hO" secondAttribute="bottom" constant="20" id="0NG-hz-HIP"/>
+                            <constraint firstItem="JEv-iN-AAR" firstAttribute="trailing" secondItem="0RV-Sq-yfd" secondAttribute="trailing" constant="20" id="40F-NB-Bjz"/>
+                            <constraint firstItem="JEv-iN-AAR" firstAttribute="trailing" secondItem="CHY-8u-7ys" secondAttribute="trailing" constant="77" id="K8T-yF-a6o"/>
+                            <constraint firstItem="jq1-PS-4hO" firstAttribute="leading" secondItem="JEv-iN-AAR" secondAttribute="leading" constant="95" id="L25-BP-EMx"/>
+                            <constraint firstItem="byg-Ry-eeQ" firstAttribute="leading" secondItem="JEv-iN-AAR" secondAttribute="leading" id="N3C-z4-hA8"/>
+                            <constraint firstItem="jq1-PS-4hO" firstAttribute="top" secondItem="zFE-zy-RJo" secondAttribute="bottom" constant="10" id="Rhl-B2-XEB"/>
+                            <constraint firstItem="byg-Ry-eeQ" firstAttribute="trailing" secondItem="JEv-iN-AAR" secondAttribute="trailing" id="SGZ-S0-d9Y"/>
+                            <constraint firstItem="JEv-iN-AAR" firstAttribute="trailing" secondItem="jq1-PS-4hO" secondAttribute="trailing" constant="95" id="VOG-Rd-enk"/>
+                            <constraint firstItem="CHY-8u-7ys" firstAttribute="leading" secondItem="JEv-iN-AAR" secondAttribute="leading" constant="77" id="ZoT-Lc-tzZ"/>
+                            <constraint firstItem="zFE-zy-RJo" firstAttribute="top" secondItem="byg-Ry-eeQ" secondAttribute="bottom" constant="10" id="h0k-vw-6W8"/>
+                            <constraint firstItem="zFE-zy-RJo" firstAttribute="centerX" secondItem="3RR-d4-cgS" secondAttribute="centerX" id="mZq-yT-rxR"/>
+                            <constraint firstItem="0RV-Sq-yfd" firstAttribute="leading" secondItem="JEv-iN-AAR" secondAttribute="leading" constant="20" id="r6z-DO-zSp"/>
+                            <constraint firstItem="byg-Ry-eeQ" firstAttribute="top" secondItem="JEv-iN-AAR" secondAttribute="top" id="wen-xX-IsV"/>
+                            <constraint firstItem="CHY-8u-7ys" firstAttribute="top" secondItem="0RV-Sq-yfd" secondAttribute="bottom" constant="10" id="y7W-To-TOz"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="WeatherCheck" id="O6E-M6-HIi"/>
+                    <connections>
+                        <outlet property="cityLabel" destination="jBT-pR-Of3" id="OHy-KX-3JQ"/>
+                        <outlet property="descLabel" destination="HwF-Ag-Q01" id="vaG-dI-5cb"/>
+                        <outlet property="feelsLikeLabel" destination="J0o-mg-gvF" id="qFB-1e-onP"/>
+                        <outlet property="humidityLabel" destination="6nG-Ey-Yfy" id="eYw-c1-gPA"/>
+                        <outlet property="searchBar" destination="byg-Ry-eeQ" id="rOm-ay-eDs"/>
+                        <outlet property="tempLabel" destination="plf-1e-yE3" id="2wZ-mQ-0WW"/>
+                        <outlet property="updatedLabel" destination="CHY-8u-7ys" id="r6g-wL-vxc"/>
+                        <outlet property="weatherBG" destination="0RV-Sq-yfd" id="oh2-LQ-A2Q"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rFH-fp-yM5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
